--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -107,7 +107,7 @@ set -g status-justify left
 set -g status-left ' #[fg=colour07]#{client_user} #[fg=colour8]at#[fg=colour01] #H #[fg=colour8]~ #[default]'
 set -g status-left-length 0
 
-set -g status-right '#[fg=white,dim]#(~/.config/tmux/scripts/kbd.sh)#[default] #[fg=white]#(~/.config/tmux/scripts/battery.sh)#[default] #[fg=white]%H:%M#[default]'
+set -g status-right '#[fg=white,dim]#(~/.config/tmux/scripts/kbd.sh)#[default] #(~/.config/tmux/scripts/battery.sh)#[default] #[fg=white,dim]%Y-%m-%d %H:%M#[default]'
 set -g status-right-length 0
 
 setw -g mode-style 'fg=brightyellow,bg=black,reverse'
